# lazydocs

./: pyproject.toml
src/lazydocs/: generation.py
